--- a/layout/about.html
+++ b/layout/about.html
@@ -1,44 +1,10 @@
-<!doctype html>
-<html><!-- InstanceBegin template="/Templates/outline.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>About - W&amp;M Debate</title>
-<!-- InstanceEndEditable -->
-<link href="styles/main.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
-</head>
+{% extends "layout/base.html" %}
 
-<body>
-<div id="wrapper">
-  <header id="logohead"> <img src="images/logo.png" alt="W&M Debate Society"/>
-<nav id= "mainmenu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a>
-          <ul id="submenu">
-            <li><a href="exec.html">Executive Board</a></li>
-          </ul>
-        </li>
-        <li><a href="tournaments.html">Tournaments</a>
-          <ul id="submenu">
-            <li><a href="wm1/index.html">APDA - W&amp;M I</a></li>
-            <li><a href="wm2/index.html">APDA - W&amp;M II</a></li>
-            <li><a href="hstournament/index.html">High School Tournament</a></li>
-            <li><a href="hsbootcamp/index.html">W&amp;M Debate Bootcamp</a></li>
-          </ul>  
-        </li>
-        <li><a href="alumni.html">Alumni</a></li>
-        <li><a href ="donate.html">Donate</a></li>
-        <li><a href="join.html">Join</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div id="content">
-  <!-- InstanceBeginEditable name="content" -->
+{% block head %}{{ super() }}{% endblock %}
+{% block title %}{{ super() }}{% endblock %}
+{% block menu %}{{ super() }}{% endblock %}
+
+{% block content %}
     <div id="images"> 
       <img src="images/about1.png"/> 
       <img src="images/about2.png"/> 
@@ -55,29 +21,6 @@
       <p>The William &amp; Mary Debate Society participates in tournaments throughout the country through the <a href="http://www.apdaweb.org/">American Parliamentary Debate Association</a> (APDA). Founded in 1981, APDA is a debate league with a membership of roughly 60 universities (including every member of the Ivy League, the University of Chicago and Stanford) that hosts weekly tournaments from September to April each year, culminating in an annual national championship featuring the best teams in the country.</p>
       <p>Parliamentary Debate is a format of competition pitting two teams, each with two-members each, against each other. One team is slotted as the "Government" team (Gov) while the other becomes the "Opposition" team (Opp). The Gov team may start a debate by presenting a motion on any topic of their choosing; motions may be traditional such as "This House believes the United States should conduct airstrikes against Iran's nuclear facilities," historical such as "It is 1939. You are Adolf Hitler, and we believe you should refrain from invading Poland," or even whimsical: "You are the Rapper from the Kanye West song 'Blame Game," and we say you should honor your word and go out and shoot a bootlegger." After presenting the motion, the Opposition team will have time to ask questions of the topic before the teams engage in 6 alternating speeches with the Gov defending the proposition and the Opp advocating against it. For a full description of Parliamentary Debate, see APDA's rules <a href="http://www.apdaweb.org/guide/rules">here</a>.</p>
     </div>
-<!-- InstanceEndEditable -->
-    <div class="linebreak"></div>
-  </div>
-  <footer>
-    <nav id ="footmenu">
-      <ul>
-        <li id="firstfoot"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="tournaments.html">Tournaments</a></li>
-        <li><a href="alumni.html">Alumni</a></li>
-        <li><a href ="donate.html">Donate</a></li>
-        <li><a href="join.html">Join</a></li>
-      </ul>
-    </nav>
-    <div id="social">
-      <ul>
-        <li><a href="http://facebook.com/debatewm"><img src="images/facebook.png" onmouseover="this.src='images/facebook_selected.png'" onmouseout="this.src='images/facebook.png'" alt="Facebook"/></a></li>
-        <li><a href="http://twitter.com/wmdebate"><img src="images/twitter.png" onmouseover="this.src='images/twitter_selected.png'" onmouseout="this.src='images/twitter.png'" alt="Twitter"/></a></li>
-        <li><a href="mailto:debateteam.wm@gmail.com"><img src="images/gmail.png" onmouseover="this.src='images/gmail_selected.png'" onmouseout="this.src='images/gmail.png'" alt="Email"/></a></li>
-      </ul>
-    </div>
-    <div id="copyright">&copy; 2014 W&M Debate Society</div>
-  </footer>
-</div>
-</body>
-<!-- InstanceEnd --></html>
+{% endblock %}
+
+{% block footmenu %}{{ super() }}{% endblock %}
