--- a/layout/base.html
+++ b/layout/base.html
@@ -39,6 +39,7 @@
   </header>
   <div id="content">
     {% block content %} {% endblock %}
+    <div class="linebreak"></div>
   </div>
   <footer>
     {% block footmenu %}
