--- a/layout/index.html
+++ b/layout/index.html
@@ -6,6 +6,9 @@
 <link href="styles/jquery.bxslider.css" rel="stylesheet" />
 {% endblock %}
 
+{% block title %}{{ super() }}{% endblock %}
+{% block menu %}{{ super() }}{% endblock %}
+
 {% block content %}
 <div id="fb-root"></div>
   <script>(function(d, s, id) {
@@ -39,6 +42,6 @@ $(document).ready(function(){
   <div id ="sidebar"><a class="twitter-timeline" href="https://twitter.com/wmdebate" data-widget-id="539211395448193025">Tweets by @wmdebate</a> 
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
   </div>
-    <div class="linebreak"></div>
   {% endblock %}
 
+{% block footmenu %}{{ super() }}{% endblock %}
